# compose

./: alerts.yaml  base-compose.yaml  create_table.sh  docker-compose.yaml  location_service_only.yaml  prometheus.yaml  pyproject.toml  sqs.conf
.docker/app/: Dockerfile
.docker/event_service/: Dockerfile
.docker/location_service/: Dockerfile
.docker/redis/: redis-populate.sh  redis-populate.txt  snapshot-backup.sh
.docker/task_manager/: Dockerfile
api/: main.py
dynamodb-snippet/: main.py
event_service/: Dockerfile  capture-traffic-docker-compose.yaml  docker-compose.yaml  main.py
hoverfly/: docker-compose.yaml
location_service/: docker-compose.yaml  location-simulation.json  main.py  mock-location-service.yaml
monitoring/: docker-compose.yaml  mock-push-gateway.yaml  push-gateway-simulation.json
newsletter-lambda/: Dockerfile  docker-compose.yaml  main.py
redis/: snapshot-backup.sh
s3-snippet/: main.py
s3store-lambda/: Dockerfile  docker-compose.yaml  main.py
sqs-snippet/: main.py
sqs-to-lambda/: Dockerfile  docker-compose.yaml  main.py
static-site/: index.html
task_manager/: Dockerfile  capture-traffic-docker-compose.yaml  docker-compose.yaml  main.py  redis_db.py  utils.py
task_manager/location/: __init__.py  location.py
task_manager/stream/: __init__.py  stream.py
task_manager/task/: task.py
