[tool.poetry]
name = "compose"
version = "0.1.0"
description = ""
authors = ["k_eryomenko <k_eryomenko@wargaming.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
redis = "^5.2.0"
prometheus-client = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
