[tool.poetry]
name = "compose"
version = "0.1.0"
description = ""
authors = ["k_eryomenko <k_eryomenko@wargaming.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.81"
aws-lambda-powertools = "^3.3.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
